# CGProj

./: .gitignore  CMakeLists.txt  README.md
base/src/: application.cpp  camera.cpp  framebuffer.cpp  fullscreen_quad.cpp  glsl_program.cpp  instanced_model.cpp  model.cpp  skybox.cpp  texture.cpp  texture2d.cpp  texture_cubemap.cpp  transform.cpp
include/: ambience.hpp  bullet.hpp  command.hpp  engine.hpp  example.hpp  ghost.hpp  map.hpp  object.hpp  shooter.hpp  texture_mapping.h
src/: ambience.cpp  bullet.cpp  command.cpp  engine.cpp  example.cpp  ghost.cpp  main.cpp  map.cpp  object.cpp  shooter.cpp  texture_mapping.cpp
